[project]
name = "ebang-securities-mcp-server"
version = "0.0.13"
description = "A MCP server for securities open api"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "loguru>=0.7.3",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "schedule>=1.2.2",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ebang_securities_mcp_server"]

[project.scripts]
ebang-securities-mcp-server = "ebang_securities_mcp_server:main"
